changes icons font source files, from 2MB to 100kb clean some images

--- a/nucleo-icons.html
+++ b/nucleo-icons.html
@@ -649,10 +649,6 @@
                     <i class="now-ui-icons business_money-coins"></i>
                     <p>business_money-coins</p>
                 </li>
-                <li>
-                    <i class="now-ui-icons business_pig"></i>
-                    <p>business_pig</p>
-                </li>
             </ul>
         </section>
         <section id="clothes">
@@ -1014,6 +1010,10 @@
                 <li>
                     <i class="now-ui-icons ui-1_calendar-60"></i>
                     <p>ui-1_calendar-60</p>
+                </li>
+                <li>
+                    <i class="now-ui-icons ui-1_check"></i>
+                    <p>ui-1_check</p>
                 </li>
                 <li>
                     <i class="now-ui-icons ui-1_lock-circle-open"></i>
