--- a/nucleo-icons.html
+++ b/nucleo-icons.html
@@ -501,7 +501,7 @@
     <header>
         <h1>Nucleo Outline Web Font v2.9</h1>
         <p>
-            <a href="https://nucleoapp.com/?ref=creativetim">nucleoapp.com</a>
+            <a href="https://nucleoapp.com/?ref=1712">nucleoapp.com</a>
         </p>
     </header>
     <div id="cd-nav">
