Fix invalid caracter
remove extra / in date picker

--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
                                 <div class="col-md-6">
                                     <div class="datepicker-container">
                                         <div class="form-group">
-                                            <input type="text" class="form-control date-picker" value="10/05/2016" / data-datepicker-color="primary">
+                                            <input type="text" class="form-control date-picker" value="10/05/2016" data-datepicker-color="primary">
                                         </div>
                                     </div>
                                 </div>
