Add GTM Replace http with https

--- a/documentation/tutorial-components.html
+++ b/documentation/tutorial-components.html
@@ -24,14 +24,14 @@
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Now UI Kit by Creative Tim">
     <meta itemprop="description" content="Start your development with a beautiful Bootstrap 4 UI kit. It is yours Free.">
-    <meta itemprop="image" content="http://s3.amazonaws.com/creativetim_bucket/products/56/original/opt_nuk_thumbnail.jpg">
+    <meta itemprop="image" content="https://s3.amazonaws.com/creativetim_bucket/products/56/original/opt_nuk_thumbnail.jpg">
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="product">
     <meta name="twitter:site" content="@creativetim">
     <meta name="twitter:title" content="Now UI Kit by Creative Tim">
     <meta name="twitter:description" content="Start your development with a beautiful Bootstrap 4 UI kit. It is yours Free.">
     <meta name="twitter:creator" content="@creativetim">
-    <meta name="twitter:image" content="http://s3.amazonaws.com/creativetim_bucket/products/56/original/opt_nuk_thumbnail.jpg">
+    <meta name="twitter:image" content="https://s3.amazonaws.com/creativetim_bucket/products/56/original/opt_nuk_thumbnail.jpg">
     <meta name="twitter:data1" content="Now UI Kit by Creative Tim">
     <meta name="twitter:label1" content="Product Type">
     <meta name="twitter:data2" content="Free">
@@ -40,8 +40,8 @@
     <meta property="fb:app_id" content="655968634437471">
     <meta property="og:title" content="Now UI Kit by Creative Tim" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://demos.creative-tim.com/now-ui-kit/index.html" />
-    <meta property="og:image" content="http://s3.amazonaws.com/creativetim_bucket/products/56/original/opt_nuk_thumbnail.jpg" />
+    <meta property="og:url" content="https://demos.creative-tim.com/now-ui-kit/index.html" />
+    <meta property="og:image" content="https://s3.amazonaws.com/creativetim_bucket/products/56/original/opt_nuk_thumbnail.jpg" />
     <meta property="og:description" content="Start your development with a beautiful Bootstrap 4 UI kit. It is yours Free." />
     <meta property="og:site_name" content="Creative Tim" />
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
@@ -127,14 +127,26 @@
             white-space: nowrap;
         }
     </style>
-</head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-NKDMSK6');</script>
+    <!-- End Google Tag Manager -->
+    </head>
 
-<body class=" sidebar-collapse">
+    <body class=" sidebar-collapse">
+      <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NKDMSK6"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg  fixed-top bg-primary navbar-transparent  " color-on-scroll="400">
         <div class="container">
             <div class="navbar-translate">
-                <a class="navbar-brand" href="http://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip" title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
+                <a class="navbar-brand" href="https://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip" title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
                     Now Ui Kit - Docs
                 </a>
                 <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -254,7 +266,7 @@
                                 <legend></legend>
                                 <p>
                                     <b>Now UI Kit</b> is a responsive Bootstrap 4 kit provided for free by
-                                    <a href="http://www.invisionapp.com" target="_blank">Invision</a> and
+                                    <a href="https://www.invisionapp.com" target="_blank">Invision</a> and
                                     <a href="https://www.creative-tim.com">Creative Tim</a>. It is a beautiful cross-platform UI kit featuring over 50 elements and 3 templates. Now UI Kit is one of the most popular UI Kits online, provided in PSD and Sketch formats by Invision. We wanted to find a way for developers worldwide to benefit from using it. So, in collaboration with Invision, we are launching the HTML version for it!
                                 </p>
                                 <p>
@@ -1524,7 +1536,7 @@ now-ui-kit
                                         <code>.slider-warning</code>,
                                         <code>.slider-danger</code>,
                                         <code>.slider-primary</code>. Check also
-                                        <a href="http://refreshless.com/nouislider/" target="_blank">noUISlider Full Documentation</a>.</p>
+                                        <a href="https://refreshless.com/nouislider/" target="_blank">noUISlider Full Documentation</a>.</p>
                                     <div id="sliderRegular" class="slider slider-info"></div>
                                     <br />
                                     <div id="sliderDouble" class="slider slider-primary"></div>
@@ -1599,7 +1611,7 @@ $(&#39;#sliderDouble&#39;).noUiSlider({
                                     <p>The re-styled the Bootstrap datepicker. You can change color for the background using the attribute
                                         <code>data-datepicker-color=" "</code>. Set the value for this attribute to
                                         <code>primary</code>.Checkout the
-                                        <a href="http://www.eyecon.ro/bootstrap-datepicker/" target="_blank">Bootstrap Datepicker Full Documentation</a>.</p>
+                                        <a href="https://www.eyecon.ro/bootstrap-datepicker/" target="_blank">Bootstrap Datepicker Full Documentation</a>.</p>
                                     <div class="row">
                                         <div class="col-md-4">
                                             <p>Datepicker Default</p>
@@ -1851,7 +1863,7 @@ $(&#39;[data-toggle=&quot;popover&quot;]&#39;).popover();
                                             <code>$brand-primary: $primary-color !default;</code>.</li>
                                         <li>Add the SASS folder from
                                             <code>assets/scss/</code> to a new project inside
-                                            <a href="http://koala-app.com/" target="_blank">Koala Compiler</a> and find the file now-ui-kit.scss, it will be the one in Green.</li>
+                                            <a href="https://koala-app.com/" target="_blank">Koala Compiler</a> and find the file now-ui-kit.scss, it will be the one in Green.</li>
                                         <li>Right click on that file and set the output path, it must be in
                                             <code>assets/css/</code> so anything that you compile will overwrite the original now-ui-kit.css</li>
                                         <li>Press on compile and everything will be done automatically.</li>
@@ -1891,7 +1903,7 @@ $(&#39;[data-toggle=&quot;popover&quot;]&#39;).popover();
                                 </a>
                             </li>
                             <li>
-                                <a href="http://presentation.creative-tim.com">
+                                <a href="https://www.creative-tim.com/about-us">
                                     About Us
                                 </a>
                             </li>
