--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Now UI Kit by Creative Tim">
     <meta itemprop="description" content="Start your development with a beautiful Bootstrap 4 UI kit. It is yours Free.">
-    <meta itemprop="image" content="http://s3.amazonaws.com/creativetim_bucket/products/56/original/opt_nuk_thumbnail.jpg">
+    <meta itemprop="image" content="https://s3.amazonaws.com/creativetim_bucket/products/56/original/opt_nuk_thumbnail.jpg">
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="product">
     <meta name="twitter:site" content="@creativetim">
     <meta name="twitter:title" content="Now UI Kit by Creative Tim">
     <meta name="twitter:description" content="Start your development with a beautiful Bootstrap 4 UI kit. It is yours Free.">
     <meta name="twitter:creator" content="@creativetim">
-    <meta name="twitter:image" content="http://s3.amazonaws.com/creativetim_bucket/products/56/original/opt_nuk_thumbnail.jpg">
+    <meta name="twitter:image" content="https://s3.amazonaws.com/creativetim_bucket/products/56/original/opt_nuk_thumbnail.jpg">
     <meta name="twitter:data1" content="Now UI Kit by Creative Tim">
     <meta name="twitter:label1" content="Product Type">
     <meta name="twitter:data2" content="Free">
@@ -40,18 +40,29 @@
     <meta property="fb:app_id" content="655968634437471">
     <meta property="og:title" content="Now UI Kit by Creative Tim" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://demos.creative-tim.com/now-ui-kit/index.html" />
-    <meta property="og:image" content="http://s3.amazonaws.com/creativetim_bucket/products/56/original/opt_nuk_thumbnail.jpg" />
+    <meta property="og:url" content="https://demos.creative-tim.com/now-ui-kit/index.html" />
+    <meta property="og:image" content="https://s3.amazonaws.com/creativetim_bucket/products/56/original/opt_nuk_thumbnail.jpg" />
     <meta property="og:description" content="Start your development with a beautiful Bootstrap 4 UI kit. It is yours Free." />
     <meta property="og:site_name" content="Creative Tim" />
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NKDMSK6');</script>
+<!-- End Google Tag Manager -->
 </head>
 
 <body class="index-page sidebar-collapse">
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NKDMSK6"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
         <div class="container">
             <div class="navbar-translate">
-                <a class="navbar-brand" href="http://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip" title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
+                <a class="navbar-brand" href="https://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip" title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
                     Now Ui Kit
                 </a>
                 <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -114,7 +125,7 @@
                     <h3>A beautiful Bootstrap 4 UI kit. Yours free.</h3>
                 </div>
                 <h6 class="category category-absolute">Designed by
-                    <a href="http://invisionapp.com/" target="_blank">
+                    <a href="https://invisionapp.com/" target="_blank">
                         <img src="./assets/img/invision-white-slim.png" class="invision-logo" />
                     </a>. Coded by
                     <a href="https://www.creative-tim.com" target="_blank">
@@ -325,7 +336,7 @@
                                                 </a>
                                             </li>
                                             <li class="nav-item dropdown">
-                                                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                <a class="nav-link dropdown-toggle" href="https://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                     Dropdown
                                                 </a>
                                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -1212,10 +1223,10 @@
                         <div class="col-md-8 ml-auto mr-auto">
                             <h2>Want more?</h2>
                             <h5 class="description">We've just launched
-                                <a href="http://demos.creative-tim.com/now-ui-kit-pro/presentation.html" target="_blank">Now UI Kit PRO</a>. It has a huge number of components, sections and example pages. Start Your Development With A Badass Bootstrap 4 UI Kit.</h4>
+                                <a href="https://demos.creative-tim.com/now-ui-kit-pro/presentation.html" target="_blank">Now UI Kit PRO</a>. It has a huge number of components, sections and example pages. Start Your Development With A Badass Bootstrap 4 UI Kit.</h4>
                         </div>
                         <div class="col-md-12">
-                            <a href="http://demos.creative-tim.com/now-ui-kit-pro/presentation.html" class="btn btn-neutral btn-round btn-lg" target="_blank">
+                            <a href="https://demos.creative-tim.com/now-ui-kit-pro/presentation.html" class="btn btn-neutral btn-round btn-lg" target="_blank">
                                 <i class="now-ui-icons arrows-1_share-66"></i> Upgrade to PRO
                             </a>
                         </div>
@@ -1296,7 +1307,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="http://presentation.creative-tim.com">
+                            <a href="https://www.creative-tim.com/about-us">
                                 About Us
                             </a>
                         </li>
@@ -1317,7 +1328,7 @@
                     <script>
                         document.write(new Date().getFullYear())
                     </script>, Designed by
-                    <a href="http://www.invisionapp.com" target="_blank">Invision</a>. Coded by
+                    <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
                     <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
                 </div>
             </div>
@@ -1328,9 +1339,9 @@
 <script src="./assets/js/core/jquery.3.2.1.min.js" type="text/javascript"></script>
 <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
 <script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
-<!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
+<!--  Plugin for Switches, full documentation here: https://www.jque.re/plugins/version3/bootstrap.switch/ -->
 <script src="./assets/js/plugins/bootstrap-switch.js"></script>
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+<!--  Plugin for the Sliders, full documentation here: https://refreshless.com/nouislider/ -->
 <script src="./assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
 <!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
 <script src="./assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
