added VI in presentation page and index page

--- a/index.html
+++ b/index.html
@@ -45,12 +45,25 @@
     <meta property="og:description" content="Start your development with a beautiful Bootstrap 4 UI kit. It is yours Free." />
     <meta property="og:site_name" content="Creative Tim" />
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NKDMSK6');</script>
-<!-- End Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-NKDMSK6');</script>
+    <!-- End Google Tag Manager -->
+
+    <script type="text/javascript">
+    (function (g) {
+    var s = document.createElement('script'),
+    t = document.getElementsByTagName('script')[0];
+    s.async = true;
+    s.src = g + '?v=' + (new Date()).getTime();
+    s.charset = 'UTF-8';
+    s.setAttribute('crossorigin', '*');
+    t.parentNode.insertBefore(s, t);
+    })('https://www.canvasflip.com/plugins/vi/vi.min.js');
+    </script>
+
 </head>
 
 <body class="index-page sidebar-collapse">
