--- a/examples/landing-page.html
+++ b/examples/landing-page.html
@@ -75,7 +75,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
 
-<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 <!-- CSS Files -->
 
@@ -84,7 +84,7 @@
 
 
 
-<link href="../assets/css/now-ui-kit.min.css?v=1.2.0" rel="stylesheet" />
+<link href="../assets/css/now-ui-kit.min.css?v=1.3.0" rel="stylesheet" />
 
 
 
@@ -374,7 +374,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <footer class="footer footer-default" >
     
-    <div class="container">
+    <div class=" container ">
         <nav>
             <ul>
                 <li>
@@ -439,7 +439,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Yno10-YTnLjjn_Vtk0V8cdcY5lC4plU"></script>
 
 
-<!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc --><script src="../assets/js/now-ui-kit.min.js?v=1.2.0" type="text/javascript"></script>
+<!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc --><script src="../assets/js/now-ui-kit.min.js?v=1.3.0" type="text/javascript"></script>
   <!-- Sharrre libray -->
 <script src="../assets/demo/jquery.sharrre.js"></script>
 
