--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
 
-<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 <!-- CSS Files -->
 
@@ -84,7 +84,7 @@
 
 
 
-<link href="./assets/css/now-ui-kit.min.css?v=1.2.0" rel="stylesheet" />
+<link href="./assets/css/now-ui-kit.min.css?v=1.3.0" rel="stylesheet" />
 
 
 
@@ -274,7 +274,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<button class="btn btn-primary btn-icon btn-round" type="button">
 							<i class="now-ui-icons ui-2_favourite-28"></i>
 						</button>
-						<button class="btn btn-primary btn-simple btn-round" type="button">Simple</button>
+						<button class="btn btn-primary btn-outline-primary btn-round" type="button">Outline</button>
 					</div>
 				</div>
 
@@ -1251,7 +1251,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 						<a href="nucleo-icons.html" class="btn btn-primary btn-round btn-lg" target="_blank">View Demo Icons</a>
 
-						<a href="https://nucleoapp.com/?ref=1712" class="btn btn-primary btn-simple btn-round btn-lg" target="_blank">View All Icons</a>
+						<a href="https://nucleoapp.com/?ref=1712" class="btn btn-outline-primary btn-round btn-lg" target="_blank">View All Icons</a>
 					</div>
 
 					<div class="col-lg-6 col-md-12">
@@ -1348,7 +1348,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				</div>
 			</div>
 			<div class="col text-center">
-				<a href="examples/login-page.html" class="btn btn-simple btn-round btn-white btn-lg" target="_blank">View Login Page</a>
+				<a href="examples/login-page.html" class="btn btn-outline-default btn-round btn-white btn-lg" target="_blank">View Login Page</a>
 			</div>
 		</div>
 	</div>
@@ -1361,13 +1361,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<a href="examples/landing-page.html" target="_blank">
 						<img src="assets/img/landing.jpg" alt="Image" class="img-raised">
 					</a>
-					<a href="examples/landing-page.html" class="btn btn-simple btn-primary btn-round">View Landing Page</a>
+					<a href="examples/landing-page.html" class="btn btn-outline-default btn-primary btn-round">View Landing Page</a>
 				</div>
 				<div class="col">
 					<a href="examples/profile-page.html" target="_blank">
 						<img src="assets/img/profile.jpg" alt="Image" class="img-raised">
 					</a>
-					<a href="examples/profile-page.html" class="btn btn-simple btn-primary btn-round">View Profile Page</a>
+					<a href="examples/profile-page.html" class="btn btn-outline-default btn-primary btn-round">View Profile Page</a>
 				</div>
 			</div>
 		</div>
@@ -1384,7 +1384,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<a href="https://www.creative-tim.com/product/now-ui-kit" class="btn btn-primary btn-lg btn-round" role="button">
 						Download HTML
 					</a>
-					<a href="https://www.invisionapp.com/now" target="_blank" class="btn btn-primary btn-lg btn-simple btn-round" role="button">
+					<a href="https://www.invisionapp.com/now" target="_blank" class="btn btn-lg btn-outline-primary btn-round" role="button">
 						Download PSD/Sketch
 					</a>
 				</div>
@@ -1475,7 +1475,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <footer class="footer"  data-background-color="black">
     
-    <div class="container">
+    <div class=" container ">
         <nav>
             <ul>
                 <li>
@@ -1540,7 +1540,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Yno10-YTnLjjn_Vtk0V8cdcY5lC4plU"></script>
 
 
-<!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc --><script src="./assets/js/now-ui-kit.min.js?v=1.2.0" type="text/javascript"></script>
+<!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc --><script src="./assets/js/now-ui-kit.min.js?v=1.3.0" type="text/javascript"></script>
   <!-- Sharrre libray -->
 <script src="./assets/demo/jquery.sharrre.js"></script>
 
